hard-gists/1cb65c4b5be2575ea3ab/run.log
=== Docker Run Log for 1cb65c4b5be2575ea3ab ===
Started at: Mi 29. Okt 12:44:41 CET 2025

[2025-10-29 12:44:42] START: Running container for 1cb65c4b5be2575ea3ab
[2025-10-29 12:44:42] SUCCESS: Container 6d5c788c92157715c29ec0516e05b17d68548503d68ec3c09a4ffedc975957a0 started for 1cb65c4b5be2575ea3ab
=== Container logs for 1cb65c4b5be2575ea3ab ===
  File "/snippet.py", line 23
    print 'QualityCenter call'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1cb65c4b5be2575ea3ab ===
[2025-10-29 12:44:44] INFO: Container 6d5c788c92157715c29ec0516e05b17d68548503d68ec3c09a4ffedc975957a0 has stopped
